objects/mcdm_15__JourneyApprovalsPlugin__c.object
<CustomObject>
    <description>Add a custom plugin component to the pending approval edit tray. Use this to append additional data to the Distributed Marketing event payload for journey personalization.</description>
    <fields>
        <fullName>mcdm_15__ApexClassName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The name of the Apex class which implements the BulkSendPlugin interface and will be used to process bulk send custom plugin data.</description>
        <label>Apex Class Name</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__Component_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Name of the component to display.</description>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mcdm_15__IsBulkSendPlugin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this plugin for bulk send</description>
        <inlineHelpText>Seleccione esto para que el complemento se muestre en el flujo de envío masivo.</inlineHelpText>
        <label>Is this a Bulk Send plugin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mcdm_15__TabLabel__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Custom label to display tab containing the custom plugin.</description>
        <label>Tab Label</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Journey Approvals Plugin</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Journey Approvals Plugin</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Approvals Plugins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>